--- a/crud-angular/src/app/app.component.html
+++ b/crud-angular/src/app/app.component.html
@@ -1,3 +1,6 @@
 <mat-toolbar color="primary">
   <span>CRUD Angular + Spring</span>
 </mat-toolbar>
+<router-outlet>
+  <!-- Isso carrega o conteudo do model do loadChildren -->
+</router-outlet>
